--- a/ShoppingList.html
+++ b/ShoppingList.html
@@ -59,10 +59,10 @@
       <aside id="sm-screen-sub-nav" class="hidden-sm hidden-md hidden-lg">
         <nav>
           <ul class="nav nav-pills">
-            <li class="active"><a href="./home.html" >Overview <span class="sr-only">(current)</span></a></li>
+            <li><a href="./home.html" >Overview</a></li>
             <li><a href="./Appointments.html">Appointments</a></li>
             <li><a href="./ToDoList.html">To Do's</a></li>
-            <li><a href="./ShoppingList.html">Shopping List</a></li>
+            <li class="active"><a href="./ShoppingList.html">Shopping List <span class="sr-only">(current)</span></a></li>
             <li><a href="./NotesList.html">Notes</a></li>
           </ul>
         </nav>
@@ -72,30 +72,50 @@
       <aside id="side-nav-bar" class="hidden-xs">
         <nav>
           <ul class="nav nav-pills nav-stacked">
-            <li class="active"><a href="./home.html" >Overview <span class="sr-only">(current)</span></a></li>
+            <li><a href="./home.html" >Overview</a></li>
             <li><a href="./Appointments.html">Appointments</a></li>
             <li><a href="./ToDoList.html">To Do's</a></li>
-            <li><a href="./ShoppingList.html">Shopping List</a></li>
+            <li class="active"><a href="./ShoppingList.html">Shopping List <span class="sr-only">(current)</span></a></li>
             <li><a href="./NotesList.html">Notes</a></li>
           </ul>
         </nav>
       </aside>
 
       <div id="all-list-content">
-        <!-- Overview Content -->
-        <section id="overview-list-content"class="container-fluid">
 
-          <div class="jumbotron">
-            <h1>Daily Sidekick</h1>
-            <p>Daily Sidekick allows you to track all your daily activities.</p>
-            <p><a class="btn btn-primary btn-lg" href="contact.html" role="button">Contact Us</a></p>
+        <!-- Shopping List Content -->
+        <section id="shopping-list-content" class="container-fluid">
+          <h1>Shopping</h1>
+          <div class="list-head">
+            <input type="text" placeholder="Enter an activity.." id="item">
+            <button id="add">
+              <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+                <circle style="fill:#43B05C;" cx="25" cy="25" r="25"/>
+                <line style="fill:none;stroke:#FFFFFF;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;" x1="25" y1="13" x2="25" y2="38"/>
+                <line style="fill:none;stroke:#FFFFFF;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;" x1="37.5" y1="25" x2="12.5" y2="25"/>
+              </svg>
+            </button>
           </div>
 
+          <div class="container">
+            <div class="listContentContainer container">
+
+              <!-- Uncompleted tasks -->
+              <h2>Uncompleted Items</h2>
+              <ul class="todo" id="todo"></ul>
+            </div>
+
+            <div class="listContentContainer container">
+
+              <!-- Completed tasks -->
+              <h2>Completed Items</h2>
+              <ul class="todo" id="completed"></ul>
+            </div>
+          </div>
         </section>
       </div>
 
     </section>
-
     <footer>
       <p>Built by Justin Weber for Project and Portfolio IV Class.</p>
     </footer>
@@ -103,8 +123,7 @@
   <script src="./js/jquery-3.2.1.js"></script>
   <script src="./js/bootstrap.js"></script>
 
-  <script type="text/javascript" src="./js/main.js"></script>
-
+  <script type="text/javascript" src="./js/shopping-list.js"></script>
 
   </body>
 </html>
