--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
     <title>Daily Sidekick App</title>
-    <link href="./css/main.css" rel="stylesheet"/>
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+    <link href="./css/list-functions.css" rel="stylesheet" />
+    <link href="./css/main.css" rel="stylesheet"/>
+
   </head>
   <body>
     <header>
@@ -33,7 +39,6 @@
           <ul class="nav navbar-nav">
             <li><a href="home.html">Home</a></li>
             <li><a href="calendar.html">Calendar</a></li>
-            <li><a href="addressbook.html">Addressbook</a></li>
             <li><a href="notes.html">Notes</a></li>
             <li><a href="myAccount.html">My Account</a></li>
             <li class="active"><a href="contact.html">Contact <span class="sr-only">(current)</span></a></li>
@@ -58,49 +63,49 @@
 
       </section>
 
-        <!--/////////////////////////////////////////////-->
-        <!-- Message Form Section -->
-        <!--/////////////////////////////////////////////-->
-        <h2>Message Form</h2>
-        <h3>(Leave us a message and we will get back to you!)</h3>
+      <!--/////////////////////////////////////////////-->
+      <!-- Message Form Section -->
+      <!--/////////////////////////////////////////////-->
+      <h2>Message Form</h2>
+      <h3>(Leave us a message and we will get back to you!)</h3>
 
-        <!-- Form Inputs and Submit Form Button -->
-        <form>
-          <div class="form-group row">
-            <div class="col-sm-12 col-md-6">
-              <label for="inputName">Name <span>*required</span></label>
-              <input type="text" class="form-control" id="inputName" placeholder="Name">
-            </div>
-            <div class="col-sm-12 col-md-6">
-              <label for="inputEmail">Email <span>*required</span></label>
-              <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+      <!-- Form Inputs and Submit Form Button -->
+      <form id="contactForm">
+        <div class="form-group row">
+          <div class="col-sm-12 col-md-6">
+            <label for="inputName">Name <span>*required</span></label>
+            <input type="text" class="form-control" id="inputName" placeholder="e.g. Joe..." required pattern="[a-zA-Z]+" minlength="3">
+          </div>
+          <div class="col-sm-12 col-md-6">
+            <label for="inputEmail">Email <span>*required</span></label>
+            <input type="email" class="form-control" id="inputEmail" placeholder="e.g. joemighty@gmail.com..." required>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-sm-12 col-md-6">
+            <label for="inputMessage">Message <span>*required</span></label>
+            <textarea class="form-control" rows="3" name="inputMessage"></textarea>
+
+            <div id="contactBtns"class="col-sm-12 col-md-6">
+
+                <!-- Send Button -->
+                <button type="submit" class="btn btn-lg btn-success">send</button>
+
+                <!-- Clear Button -->
+                <button id="clearBtn" type="button" class="btn btn-lg btn-danger">clear</button>
             </div>
           </div>
-          <div class="form-group row">
-            <div class="col-sm-12 col-md-6">
-              <label for="inputMessage">Message <span>*required</span></label>
-              <textarea class="form-control" rows="3" name="inputMessage"></textarea>
+        </div>
+      </form>
 
-              <div class="col-sm-12 col-md-6">
-                <!--<div class="col-sm-6 col-md-3">-->
-                  <!-- Send Button -->
-                  <button type="submit" class="btn btn-lg btn-success">send</button>
-                <!--</div>-->
-                <!--<div class="col-sm-6 col-md-3">-->
-                  <!-- Clear Button -->
-                  <button type="submit" class="btn btn-lg btn-danger">clear</button>
-                <!--</div>-->
-              </div>
-            </div>
-          </div>
-
-        </form>
     </section>
     <footer>
-      <p>Built by Justin Weber for Project and Portfolio IV.</p>
+      <p>Built by Justin Weber for Project and Portfolio IV Class.</p>
     </footer>
-  <script type="text/javascript" src="./js/main.js"></script>
+
   <script src="./js/jquery-3.2.1.js"></script>
   <script src="./js/bootstrap.js"></script>
+
+  <script type="text/javascript" src="./js/main.js"></script>
   </body>
 </html>
