--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
     <title>Daily Sidekick App</title>
-    <link type="text/css" href="./css/main.css" rel="stylesheet"/>
-    <link type="text/css" href="./css/bootstrap.css" rel="stylesheet">
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+    <link href="./css/main.css" rel="stylesheet"/>
+
   </head>
   <body>
+
     <section id="loginPage" class="container-fluid">
       <div class="wrapper">
 
@@ -23,27 +29,28 @@
         <!-- Sign in Inputs -->
         <form action="">
           <label for="email"></label>
-          <input type="email" name="email" value="youremail@mail.com">
+          <input type="email" name="email" placeholder="youremail@mail.com">
           <label for="password"></label>
-          <input type="password" name="password" value="password">
+          <input type="password" name="password" placeholder="password">
         </form>
 
         <!-- Lost Password Link -->
         <p>Forgot Password?</p>
 
-        <!-- Login Link -->
-        <a id="loginBtn" href="home.html" role="button">login</a>
+        <div id="landingPageBtns">
+          <!-- Login Link -->
+          <a id="loginBtn" href="./home.html" type="submit" class="btn btn-primary btn-lg" role="button">login</a>
 
-        <!-- Create Account Link -->
-        <a id="createBtn" href="">create account</a>
-
-        <button id="login" type="submit" class="btn btn-primary btn-lg">login</button>
-
+          <!-- Create Account Link -->
+          <a id="createBtn" href="./signup.html">create account</a>
+        </div>
 
       </div>
     </section>
-  <script type="text/javascript" src="./js/main.js"></script>
+
   <script type="text/javascript" src="./js/jquery-3.2.1.js"></script>
   <script type="text/javascript" src="./js/bootstrap.js"></script>
+
+  <script type="text/javascript" src="./js/main.js"></script>
   </body>
 </html>
