--- a/myAccount.html
+++ b/myAccount.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
     <title>Daily Sidekick App</title>
-    <link href="./css/main.css" rel="stylesheet" />
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+    <link href="./css/main.css" rel="stylesheet"/>
+
   </head>
   <body>
+
     <header>
       <img class="navbar-brand" src="./assets/logo.png" alt="Daily Sidekick Logo"></img>
       <h1>My Account</h1>
@@ -33,7 +39,6 @@
           <ul class="nav navbar-nav">
             <li><a href="home.html">Home</a></li>
             <li><a href="calendar.html">Calendar</a></li>
-            <li><a href="addressbook.html">Addressbook</a></li>
             <li><a href="notes.html">Notes</a></li>
             <li class="active"><a href="myAccount.html">My Account <span class="sr-only">(current)</span></a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -62,10 +67,13 @@
 
     </section>
     <footer>
-      <p>Built by Justin Weber for Project and Portfolio IV.</p>
+      <p>Built by Justin Weber for Project and Portfolio IV Class.</p>
     </footer>
-  <script type="text/javascript" src="./js/main.js"></script>
+
   <script src="./js/jquery-3.2.1.js"></script>
   <script src="./js/bootstrap.js"></script>
+
+  <script type="text/javascript" src="./js/main.js"></script>
+
 </body>
 </html>
