Added a localStorage user login system. Added ability to change user info. Can now clear all lists from settings.

--- a/ShoppingList.html
+++ b/ShoppingList.html
@@ -53,7 +53,7 @@
     </nav>
 
 
-    <section id="homePage" class="container-fluid">
+    <section id="home-shopping-page" class="container-fluid">
 
       <!-- X-Small & Small Sreen Side Sub-Navigation -->
       <aside id="sm-screen-sub-nav" class="hidden-sm hidden-md hidden-lg">
@@ -97,19 +97,19 @@
             </button>
           </div>
 
-          <div class="container">
-            <div class="listContentContainer container">
+          <div class="listContentContainer container">
+            <div class="contentList container">
 
               <!-- Uncompleted tasks -->
               <h2>Uncompleted Items</h2>
-              <ul class="todo" id="todo"></ul>
+              <ul class="home-subpage-lists" id="todo"></ul>
             </div>
 
-            <div class="listContentContainer container">
+            <div class="contentList container">
 
               <!-- Completed tasks -->
               <h2>Completed Items</h2>
-              <ul class="todo" id="completed"></ul>
+              <ul class="home-subpage-lists" id="completed"></ul>
             </div>
           </div>
         </section>
