--- a/Appointments.html
+++ b/Appointments.html
@@ -53,7 +53,7 @@
     </nav>
 
 
-    <section id="homePage" class="container-fluid">
+    <section id="home-appointment-page" class="home-appointment-page container-fluid">
 
       <!-- X-Small & Small Sreen Side Sub-Navigation -->
       <aside id="sm-screen-sub-nav" class="hidden-sm hidden-md hidden-lg">
@@ -81,41 +81,41 @@
         </nav>
       </aside>
 
-      <div>
-        <div id="all-list-content">
+      <div id="all-list-content">
 
-          <!-- Appointment Content -->
-          <section id="appointment-list-content" class="container-fluid">
-          <h1>Appointments</h1>
-            <div class="list-head">
-              <input type="text" placeholder="Enter an activity.." id="item">
-              <button id="add">
-                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
-                  <circle style="fill:#43B05C;" cx="25" cy="25" r="25"/>
-                  <line style="fill:none;stroke:#FFFFFF;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;" x1="25" y1="13" x2="25" y2="38"/>
-                  <line style="fill:none;stroke:#FFFFFF;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;" x1="37.5" y1="25" x2="12.5" y2="25"/>
-                </svg>
-              </button>
+        <!-- Appointment Content -->
+        <section id="appointment-list-content" class="container-fluid">
+        <h1>Appointments</h1>
+          <div class="list-head">
+            <input type="text" placeholder="Enter an activity.." id="item">
+            <button id="add">
+              <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+                <circle style="fill:#43B05C;" cx="25" cy="25" r="25"/>
+                <line style="fill:none;stroke:#FFFFFF;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;" x1="25" y1="13" x2="25" y2="38"/>
+                <line style="fill:none;stroke:#FFFFFF;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;" x1="37.5" y1="25" x2="12.5" y2="25"/>
+              </svg>
+            </button>
+          </div>
+
+          <div class="listContentContainer container">
+            <div class="contentList container">
+
+              <!-- Uncompleted tasks -->
+              <h2>Uncompleted Appointments</h2>
+              <ul class="home-subpage-lists" id="todo"></ul>
             </div>
 
-            <div class="listContentContainer container">
-              <div class="contentList container">
+            <div class="contentList container">
 
-                <!-- Uncompleted tasks -->
-                <h2>Uncompleted Appointments</h2>
-                <ul class="todo" id="todo"></ul>
-              </div>
-
-              <div class="contentList container">
-
-                <!-- Completed tasks -->
-                <h2>Completed Appointments</h2>
-                <ul class="todo" id="completed"></ul>
-              </div>
+              <!-- Completed tasks -->
+              <h2>Completed Appointments</h2>
+              <ul class="home-subpage-lists" id="completed"></ul>
             </div>
-          </section>
-        </div>
+
+          </div>
+        </section>
       </div>
+
     </section>
     <footer>
       <p>Built by Justin Weber for Project and Portfolio IV Class.</p>
@@ -125,7 +125,6 @@
   <script src="./js/bootstrap.js"></script>
 
   <script type="text/javascript" src="./js/appointments.js"></script>
-
 
   </body>
 </html>
