--- a/NotesList.html
+++ b/NotesList.html
@@ -52,7 +52,7 @@
     </nav>
 
 
-    <section id="homePage" class="container-fluid">
+    <section id="home-notes-page" class="container-fluid">
 
       <!-- X-Small & Small Sreen Side Sub-Navigation -->
       <aside id="sm-screen-sub-nav" class="hidden-sm hidden-md hidden-lg">
@@ -96,17 +96,17 @@
             </button>
           </div>
 
-          <div class="container">
-            <div class="listContentContainer container">
+          <div class="listContentContainer container">
+            <div class="contentList container">
               <!-- Uncompleted tasks -->
               <h2>Uncompleted Notes</h2>
-              <ul class="todo" id="todo"></ul>
+              <ul class="home-subpage-lists" id="todo"></ul>
             </div>
 
-            <div class="listContentContainer container">
+            <div class="contentList container">
               <!-- Completed tasks -->
               <h2>Completed Notes</h2>
-              <ul class="todo" id="completed"></ul>
+              <ul class="home-subpage-lists" id="completed"></ul>
             </div>
           </div>
         </section>
