--- a/ToDoList.html
+++ b/ToDoList.html
@@ -53,7 +53,7 @@
     </nav>
 
 
-    <section id="homePage" class="container-fluid">
+    <section id="home-todo-page" class="container-fluid">
 
       <!-- X-Small & Small Sreen Side Sub-Navigation -->
       <aside id="sm-screen-sub-nav" class="hidden-sm hidden-md hidden-lg">
@@ -98,19 +98,19 @@
             </button>
           </div>
 
-          <div class="container">
-            <div class="listContentContainer container">
+          <div class="listContentContainer container">
+            <div class="contentList container">
 
               <!-- Uncompleted tasks -->
               <h2>Uncompleted Tasks</h2>
-              <ul class="todo" id="todo"></ul>
+              <ul class="home-subpage-lists" id="todo"></ul>
             </div>
 
-            <div class="listContentContainer container">
+            <div class="contentList container">
 
               <!-- Completed tasks -->
               <h2>Completed Tasks</h2>
-              <ul class="todo" id="completed"></ul>
+              <ul class="home-subpage-lists" id="completed"></ul>
             </div>
           </div>
         </section>
