--- a/calendar.html
+++ b/calendar.html
@@ -55,7 +55,7 @@
 
       <!-- Created Add Event btn to trigger add event modal -->
       <div class="row text-center">
-        <button id="add-event-btn"type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#addEventModal">Add Event</button>
+        <button id="add-event-btn"type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#addEventModal">Add Event</button>
       </div>
 
 
@@ -86,29 +86,29 @@
 
                 <form class="form-horizontal">
                   <div class="different form-group">
-                    <label for="event-info" class="col-sm-2 control-label">Title:</label>
-                    <div class="col-sm-10">
+                    <div class="col-xs-12">
+                      <label for="event-info" class="col-sm-2 control-label">Title:</label>
                       <input type="text" class="form-control" id="event-info" name="Title" placeholder="Event Title">
                     </div>
                   </div>
-                  <div class="form-group">
-                    <label for="new-event-start-date" class="lSideLabel col-sm-2 control-label">Start Date:</label>
-                    <div class="col-xs-4">
-                      <input type="date" class="lSideInput form-control" id="new-event-start-date" name="Start-Date">
+                  <div id="eventDate" class="form-group">
+                    <div class="beginDate col-xs-12 col-md-6">
+                      <label for="new-event-start-date" class="col-sm-2 control-label">Start Date:</label>
+                      <input type="date" class="form-control" id="new-event-start-date" name="Start-Date">
                     </div>
-                    <label for="new-event-end-date" class="rSideLabel col-sm-2 control-label">End Date:</label>
-                    <div class="col-xs-4">
-                      <input type="date" class="rSideInput form-control" id="new-event-end-date" name="End-Date">
+                    <div class="stopDate col-xs-12 col-md-6">
+                      <label for="new-event-end-date" class="col-sm-2 control-label">End Date:</label>
+                      <input type="date" class="form-control" id="new-event-end-date" name="End-Date">
                     </div>
                   </div>
-                  <div class="same form-group">
-                    <label for="new-event-start-time" class="lSideLabel col-sm-2 control-label">Start Time:</label>
-                    <div class="col-xs-4">
-                      <input type="time" class="lSideInput form-control" id="new-event-start-time" name="Start-Time">
+                  <div id="eventTime" class="same form-group">
+                    <div class="beginTime col-xs-12 col-md-6">
+                      <label for="new-event-start-time" class="col-sm-2 control-label">Start Time:</label>
+                      <input type="time" class="form-control" id="new-event-start-time" name="Start-Time">
                     </div>
-                    <label for="new-event-end-time" class="rSideLabel col-sm-2 control-label">End Time:</label>
-                    <div class="col-xs-4">
-                      <input type="time" class="rSideInput form-control" id="new-event-end-time" name="End-Time">
+                    <div class="stopTime col-xs-12 col-md-6">
+                      <label for="new-event-end-time" class="col-sm-2 control-label">End Time:</label>
+                      <input type="time" class="form-control" id="new-event-end-time" name="End-Time">
                     </div>
                   </div>
                 </form>
