--- a/contact.html
+++ b/contact.html
@@ -106,6 +106,6 @@
   <script src="./js/jquery-3.2.1.js"></script>
   <script src="./js/bootstrap.js"></script>
 
-  <script type="text/javascript" src="./js/main.js"></script>
+  <!--<script type="text/javascript" src="./js/main.js"></script>-->
   </body>
 </html>
