--- a/myAccount.html
+++ b/myAccount.html
@@ -48,32 +48,94 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-
     <section id="myAccountPage">
 
         <!-- Greeting -->
-        <h2>Hello <span>name of user</span></h2>
+        <h2>Hello <span id="userGreeting">name of user</span></h2>
 
 
         <!-- Settings List with icons-->
         <ul id="settingsList">
-          <li>Change Name <span><img class="custom-icon" src="./assets/edit-icon.png" alt="Edit Icon"></span></li>
-          <li>Change Password <span><img class="custom-icon" src="./assets/edit-icon.png" alt="Edit Icon"></span></li>
-          <li>Clear Completed Info <span><img class="custom-icon" src="./assets/trash-icon.png" alt="Trash Can Icon"></span></li>
-          <li>Click Sound On Press <span><img class="custom-icon" src="./assets/trash-icon.png" alt="Trash Can Icon"></span></li>
+          <li>Change Name <div class="edit pull-right" data-toggle="modal" data-target=".editUsrUn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></div></li>
+          <li>Change Password <div class="edit pull-right" data-toggle="modal" data-target=".editUsrPwd"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></div></li>
+          <li>Clear All Saved Info <div class="remove pull-right" onclick="removeSavedData()"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></div></li>
         </ul>
 
 
-
     </section>
+
     <footer>
       <p>Built by Justin Weber for Project and Portfolio IV Class.</p>
     </footer>
 
+    <!-- Edit Username modal -->
+    <div class="modal fade editUsrUn" tabindex="-1" role="dialog" aria-labelledby="myUsernameLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myUsernameLabel">Create New Username</h4>
+          </div>
+          <div class="modal-body">
+
+            <div class="row">
+              <div class='col-sm-12'>
+
+                <form class="form-horizontal">
+                  <div class="different form-group">
+                    <div class="col-xs-12">
+                      <label for="newUn" class="col-sm-2 control-label">New Username:</label>
+                      <input type="text" class="form-control" id="newUn" name="Title" placeholder="Username">
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary" onClick="editSavedUsername()">Save</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Edit Password modal -->
+    <div class="modal fade editUsrPwd" tabindex="-1" role="dialog" aria-labelledby="myPasswordLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myPasswordLabel">Create New Password</h4>
+          </div>
+          <div class="modal-body">
+
+            <div class="row">
+              <div class='col-sm-12'>
+
+                <form class="form-horizontal">
+                  <div class="different form-group">
+                    <div class="col-xs-12">
+                      <label for="newPw" class="col-sm-2 control-label">New Password:</label>
+                      <input type="text" class="form-control" id="newPw" name="Title" placeholder="Password">
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary" onClick="editSavedPassword()">Save</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        </div>
+        </div>
+      </div>
+    </div>
+
   <script src="./js/jquery-3.2.1.js"></script>
   <script src="./js/bootstrap.js"></script>
 
-  <script type="text/javascript" src="./js/main.js"></script>
+  <script type="text/javascript" src="./js/login-system.js"></script>
 
 </body>
 </html>
