--- a/signup.html
+++ b/signup.html
@@ -17,41 +17,33 @@
   </head>
   <body>
 
-    <section id="loginPage" class="container-fluid">
+    <section id="signupPage" class="container-fluid">
       <div class="wrapper">
 
-        <!-- Logo -->
-        <img src="./assets/logo.png" alt="Daily Sidekick Logo">
+        <a type="button" id="backBtn" class="btn btn-default btn-lg" href="index.html">
+          <span class="glyphicon glyphicon-arrow-left"></span> Back
+        </a>
 
         <!-- Login in Heading -->
-        <h1>login to your account</h1>
+        <h1>Register For A Free Account!</h1>
 
-        <!-- Sign in Inputs -->
-        <form action="">
-          <label for="userName"></label>
-          <input id="userName" type="text" placeholder="Enter Username" value=""/>
-          <label for="userPw"></label>
-          <input id="userPw" type="password" placeholder="Enter Password" value=""/>
+        <!-- Sign up Inputs -->
+        <form id="register-form">
+            <input id="un" type="text" placeholder="Username" value=""/>
+            <input id="pwd" type="password" placeholder="Password" value=""/>
+            <a id="rgstr_btn" class="btn btn-default btn-lg" type="submit" onClick="store()">Create Account</a>
         </form>
-
-        <!-- Lost Password Link -->
-        <p>Forgot Password?</p>
-
-        <div id="landingPageBtns">
-          <!-- Login Link -->
-          <a id="loginBtn" type="submit" class="btn btn-primary btn-lg" role="button" onClick="check()">login</a>
-
-          <!-- Create Account Link -->
-          <a id="createBtn" href="./signup.html" type="button" class="btn btn-primary btn-lg" role="button">create account</a>
-        </div>
 
       </div>
     </section>
+
+    <footer>
+      <p>Built by Justin Weber for Project and Portfolio IV Class.</p>
+    </footer>
 
   <script type="text/javascript" src="./js/jquery-3.2.1.js"></script>
   <script type="text/javascript" src="./js/bootstrap.js"></script>
 
   <script type="text/javascript" src="./js/login-system.js"></script>
-
   </body>
 </html>
