--- a/home.html
+++ b/home.html
@@ -87,7 +87,11 @@
 
           <div class="jumbotron">
             <h1>Daily Sidekick</h1>
-            <p>Daily Sidekick allows you to track all your daily activities.</p>
+            <p>
+              Welcome to Daily Sidekick! Our goal is to help alleviate some of the stress of trying to
+              remember everything in your busy schedule. With Daily Sidekick you can track all your daily
+              activities from appointments, to your shopping list.
+            </p>
             <p><a class="btn btn-primary btn-lg" href="contact.html" role="button">Contact Us</a></p>
           </div>
 
