Changed home jumbotron message.

--- a/home.html
+++ b/home.html
@@ -88,9 +88,9 @@
           <div class="jumbotron">
             <h1>Daily Sidekick</h1>
             <p>
-              Welcome to Daily Sidekick! Our goal is to help alleviate some of the stress of trying to
-              remember everything in your busy schedule. With Daily Sidekick you can track all your daily
-              activities from appointments, to your shopping list.
+              Welcome to Daily Sidekick! Our goal is to help alleviate some of the stress that trying to
+              remember everything in your busy schedule brings. With Daily Sidekick you can track all your daily
+              activities from appointments to your shopping list.
             </p>
             <p><a class="btn btn-primary btn-lg" href="contact.html" role="button">Contact Us</a></p>
           </div>
